Revision 35  : Fixed the gallery module by  abhishekdelta  on  2010-06-12 16:57:5
--------------------------------------------------------------
Revision 34  : Added smart tables in user management by  abhishekdelta  on  2010-06-12 06:56:2
--------------------------------------------------------------
Revision 33  : Added comments feature for articles by  abhishekdelta  on  2010-06-12 02:07:3
--------------------------------------------------------------
Revision 32  : Fixed problems with News module : patch by Chakra by  abhishekdelta  on  2010-06-12 00:46:0
--------------------------------------------------------------
Revision 31  : Added Installation Forms Check : patch for Ticket 1 by Mohsin by  abhishekdelta  on  2010-06-10 23:30:5
--------------------------------------------------------------
Revision 30  : Fixed bug specified in Ticket 19 by  abhishekdelta  on  2010-06-10 01:00:2
--------------------------------------------------------------
Revision 29  : Fixed php shortforms bugs and updated DEVELOPER-README by  abhishekdelta  on  2010-06-08 23:25:1
--------------------------------------------------------------
Revision 28  : Added SQL query helper for sqlquery module by  abhishekdelta  on  2010-06-07 22:42:1
--------------------------------------------------------------
Revision 27  : Added quicklinks in Pagesettings by  abhishekdelta  on  2010-06-07 19:38:4
--------------------------------------------------------------
Revision 26  : Minor bugfixes by  abhishekdelta  on  2010-06-07 15:35:1
--------------------------------------------------------------
Revision 25  : Added PDF module : patch by Chakra applied by  abhishekdelta  on  2010-06-06 22:30:3
--------------------------------------------------------------
Revision 24  : fixed a bug in template installation by  abhishekdelta  on  2010-06-06 21:13:5
--------------------------------------------------------------
Revision 23  : Minor bugfixes by  abhishekdelta  on  2010-06-05 11:38:4